--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- En el menú de configuración de Chrome , seleccione Configuración del sitio> Configuración de contenido adicional> Sonido . Desde el menú de configuración de sonido de Chrome , asegúrese de que el control deslizante Permitir que los sitios reproduzcan sonido (recomendado) esté habilitado -->
     </audio>
     <footer>
-            <h4 class="pie">© Copyright 2022. Diseñado por Jorge Ignacio Villegas Todos los derechos reservados</h4>
+            <h4 class="pie">© Copyright 2022. Diseñado por Jorge Ignacio Villegas Todos los derechos reservados.</h4>
     </footer>
 </body>
 </html>
