--- a/inicio.html
+++ b/inicio.html
@@ -96,7 +96,7 @@
         </section>
     </article>
         <footer>
-                <h4>© Copyright 2022. Diseñado por Jorge Ignacio Villegas Todos los derechos reservados</h4>
+                <h4>© Copyright 2022. Diseñado por Jorge Ignacio Villegas Todos los derechos reservados.</h4>
         </footer>
 </body>
 </html>
